<resources>
    <string name="app_name">Potholes</string>

    //Fragment Login
    <string name="welcome">Benvenuto</string>
    <string name="nickname">Inserisci nickname qui...</string>
    <string name="accedi">Accedi</string>
    <string name="Potholes">Potholes</string>

    //Fragment HomePage
    <string name="ciaoUtente">Ciao, %1$s!</string>
    <string name="nextPotholes">Cerca buche vicino a te</string>
    <string name="startRecord">Inizia registrazione</string>
    <string name="endRecord">Termina registrazione</string>

    <string name="username">Username: </string>
    <string name="coordinate">Coordinate: </string>
    <string name="indirizzo">Indirizzo: </string>

    <string name="changeView">Cambia\n visualizzazione</string>
    <string name="allPotholes">Visuallizza\nbuche</string>

    <string-array name="distanze">
        <item>Tutti</item>
        <item>300 metri</item>
        <item>500 metri</item>
        <item>1000 metri</item>
    </string-array>

</resources>