<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".View.Fragment.LoginFragment">

    <Button
        android:id="@+id/accediButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accedi"
        app:cornerRadius="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNicknameLayout"
        app:layout_constraintVertical_bias="0.113" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNicknameLayout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/nickname"
        android:textColorHint="#565656"
        app:circularflow_radiusInDP="100dp"
        app:errorEnabled="false"
        app:boxStrokeColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="0.11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="329dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLogin"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="@drawable/pothole_sessantaquattro" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLoginTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Potholes"
        android:textColor="@color/secondaryColor"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarLogin"
        app:layout_constraintEnd_toEndOf="@+id/toolbarLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>